--- a/frontend/html/fortschritt.html
+++ b/frontend/html/fortschritt.html
@@ -1,4 +1,14 @@
-<!-- Designm, sowie Dokumentation zusammen mit KI erstellt und überarbeitet -->
+<!--
+==============================================================
+
+Fortschritt
+Template mit KI erstellt
+
+Quelle für das Icon:
+https://www.reshot.com/free-svg-icons/item/home-X27HUJS9EC/
+
+==============================================================
+-->
 
 <!DOCTYPE html>
 <html lang="de">
@@ -16,78 +26,63 @@
     <!-- Quellen -->
 
 
-    <div class="container">
+    <div class="umgebung">
 
         <header>
-            <h1>Sunshine To Go</h1><br><a href="../html/sunshine_to_go_menu.html"><button>Zurück zum Menü</button></a>
-            <p>Projekt-Dokumentation & Entwicklungsstand</p>
+            <h1>Sunshine To Go</h1><br>
+            <a href="../html/sunshine_to_go_menu.html"><button>Zurück zum Menü</button></a>
+            <p class="untertitel">Projekt Dokumentation und Entwicklungs-Status</p>
         </header>
 
         <section class="card">
             <h2>Coding Conventions</h2>
             <div class="code-rules">
-                <div class="rule-item">
-                    <strong>Variablen</strong>
+                <div class="card2">
+                    <strong>Variablen</strong><br><br>
                     Verwendung von <code>CamelCase</code>.
                 </div>
-                <div class="rule-item">
-                    <strong>Deklaration</strong>
+                <div class="card2">
+                    <strong>Deklaration</strong><br><br>
                     So wenig <code>const</code> wie möglich, eher <code>let</code>.
                 </div>
-                <div class="rule-item">
-                    <strong>Kommentare</strong>
-                    Über den Code schreiben, was dieser macht.
+                <div class="card2">
+                    <strong>Fortschritt</strong><br><br>
+                    Dokumentation vom Projekt
                 </div>
-                <div class="rule-item">
-                    <strong>Bibliotheken</strong>
-                    Nutzung muss explizit angegeben werden.
-                </div>
-                <div class="rule-item">
-                    <strong>Zuständigkeit von <br> ThreeJS, Modelling</strong>
-                    <code>Lena</code>
-                </div>
-                <div class="rule-item">
-                    <strong>Zuständigkeit von Datenbank, Server</strong>
-                    <code>Jan</code>
-                </div>
-                <div class="rule-item">
-                    <strong>Zuständigkeit von<br>JS, HTML, CSS</strong>
-                    <code>Markus</code>
-                </div>
-                <div class="rule-item">
-                    <strong>Variablen</strong>
-                    Verwendung von <code>CamelCase</code>.
+                <div class="card2">
+                    <strong>Bibliothek Three JS</strong><br><br>
+                    Abwägung zwischen 2D und Videospiel und 3D.
                 </div>
             </div>
             <br>
-            <button class="btnHome">Home</button>
         </section>
 
         <section class="card">
             <h2>Entwicklungs-Status</h2>
             <ul class="task-list">
-                <li>Start-Buttons erstellen <span class="label status-done">Erledigt</span></li>
-                <li>Onclick Funktionen zuordnen <span class="label status-done">Erledigt</span></li>
-                <li>Beenden-Knopf <span class="label status-done">Erledigt</span></li>
-                <li>Layout Divs <span class="label status-done">Erledigt</span></li>
-                <li>Abstraktion Menu-Button-Zurück <span class="label status-done">Erledigt</span></li>
-                <li>Modulare Datenstruktur (Sound) <span class="label status-done">Erledigt</span></li>
-                <li>Lokaler Speicher (Persistent) <span class="label status-done">Erledigt</span></li>
-                <li>3 Charakter erstellen <span class="label status-done">Erledigt</span></li>
-                <li>Server aufsetzen <span class="label status-done">Erledigt</span></li>
-                <li>Wetterdaten <span class="label status-done">Erledigt</span></li>
-                <li>3D Umgebungswelt <span class="label status-done">Erledigt</span></li>
-                <li>Fortschrittsanzeige <span class="label status-done">Erledigt</span></li>
+                <li>Start-Buttons erstellen <span class="label GREEN">Erledigt</span></li>
+                <li>Onclick Funktionen ersetzen <span class="label GREEN">Erledigt</span></li>
+                <li>Beenden-Knopf <span class="label GREEN">Erledigt</span></li>
+                <li>Layout Divs für das Menu erstellen <span class="label GREEN">Erledigt</span></li>
+                <li>Abstraktion Menu-Button-Zurück <span class="label GREEN">Erledigt</span></li>
+                <li>Modulare Datenstruktur (Soundspeicherung) <span class="label GREEN">Erledigt</span></li>
+                <li>Lokaler Speicher (Persistent) <span class="label GREEN">Erledigt</span></li>
+                <li>Drei Charaktere erstellen <span class="label GREEN">Erledigt</span></li>
+                <li>Server aufsetzen <span class="label GREEN">Erledigt</span></li>
+                <li>Wetterdaten empfangen <span class="label GREEN">Erledigt</span></li>
+                <li>3D Umgebungswelt <span class="label GREEN">Erledigt</span></li>
+                <li>Fortschrittsanzeige <span class="label GREEN">Erledigt</span></li>
                 <li><span>-</span></li>
-                <li>Optionen (Spieleinstellungen) <span class="label status-wip">In Arbeit</span></li>
-                <li>Highscore Bereich <span class="label status-wip">In Arbeit</span></li>
-                <li>Punktesystem & Ranking <span class="label status-wip">In Arbeit</span></li>
-                <li>Design & Menüs <span class="label status-wip">In Arbeit</span></li>
-                <li>Pause-Menü <span class="label status-wip">In Arbeit</span></li>
+                <li>Optionen (Spieleinstellungen) <span class="label YELLOW">In Arbeit</span></li>
+                <li>Highscore Bereich <span class="label YELLOW">In Arbeit</span></li>
+                <li>Punktesystem & Ranking <span class="label YELLOW">In Arbeit</span></li>
+                <li>Design & Menüs <span class="label YELLOW">In Arbeit</span></li>
+                <li>Pause-Menü <span class="label YELLOW">In Arbeit</span></li>
                 <li><span>-</span></li>
-                <li>Handy-Tauglichkeit <span class="label status-open">Offen</span></li>
+                <li>Handy-Tauglichkeit <span class="label RED">Offen</span></li>
             </ul><br>
-            <button class="btnHome">Home</button>
+            <button class="btnHome" aria-label="Aktion ausführen"><img
+                    src="../bilder/icons/reshot-icon-home-X27HUJS9EC.svg" alt="Home-Icon" width="42" height="42"></svg></button>
         </section>
 
         <section class="card">
@@ -129,7 +124,8 @@
                 <li>🎗️ <strong>4. Platz:</strong> Trostpreis</li>
             </ul>
             <br>
-            <button class="btnHome">Home</button>
+            <button class="btnHome" aria-label="Aktion ausführen"><img
+                    src="../bilder/icons/reshot-icon-home-X27HUJS9EC.svg" alt="Home-Icon" width="42" height="42"></svg></button>
         </section>
 
         <section class="card" style="border-left: 5px solid red;">
@@ -161,22 +157,10 @@
                 Seitenwechsel, mit jeweils unterschiedlichen CSS Datein gewechselt
             </div>
         </section>
-        <section class="card" style="border-left: 5px solid red;">
-            <h2 style="border-left: none; padding: 0; color: #b91c1c;">Bug Report</h2>
-            <div style="background: #fef2f2; padding: 15px; border-radius: 8px;">
-                <strong>Problem:</strong> Fenster lässt sich nach Navigation nicht schließen.<br>
-                <strong>Fehlermeldung:</strong> <em>"Scripts may close only the windows that were opened by
-                    it."</em><br>
-                <strong>Status:</strong> <span class="label status-done">Gefunden [x]</span><br>
-                <strong>Erklärung:</strong> Dies ist ein Sicherheitsfeature des Browsers. Eine Seite kann sich nicht
-                selbst schließen, wenn der Nutzer sie manuell geöffnet hat (nur Popups, die per Script geöffnet wurden,
-                dürfen per Script geschlossen werden).
-            </div>
-        </section>
 
         <section class="card">
             <h2>Apollinaire Calligram</h2>
-            <div class="poem-container">
+            <div class="poem-umgebung">
                 <pre class="art">
              S
              A
@@ -200,7 +184,8 @@
                 <p style="margin-top:20px; font-style: italic;">- Apollinaire</p>
             </div>
             <br>
-            <button class="btnHome">Home</button>
+            <button class="btnHome" aria-label="Aktion ausführen"><img
+                    src="../bilder/icons/reshot-icon-home-X27HUJS9EC.svg" alt="Home-Icon" width="42" height="42"></svg></button>
         </section>
 
     </div>
@@ -209,7 +194,7 @@
 
     <link rel="stylesheet" href="../CSS/fortschritt.css">
     <script src="../JavaScript/allButtons_Options_Functions.js"></script>
-<script type="module" src="../JavaScript/menuSound.js"></script>
+    <script type="module" src="../JavaScript/menuSound.js"></script>
 </body>
 
 </html>
