--- a/frontend/html/sunshine_to_go_menu.html
+++ b/frontend/html/sunshine_to_go_menu.html
@@ -1,4 +1,3 @@
-<!--- Menu komplett selbst gestaltet -->
 
 <!DOCTYPE html>
 <html lang="de">
@@ -7,7 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunshine To Go</title>
+
+    <!-- Abfragefunktion für den DarkMode s. JS Datei -->
+    <script src="../JavaScript/dunkelModusAbfrage.js"></script> 
+
 </head>
+
 <body>
 
     <!--
@@ -23,46 +27,30 @@
         <!-- Ab hier fangen die Bildknöpfe an -->
 
         <div class="container">
-
             <figure id="startGameButton" class="bild">
-                <a href="../html/spiel_spielen.html"><img src="../bilder/menu_bilder/gameplay.jpg"
-                        alt="Spiel-Start-Bild"></a>
+                <a href="../Gameplay/index.html"><img src="../bilder/menu_bilder/Endprodukt/KaffeeToGo.jpg"
+                        alt="Spiel-Start-Bild, ein Kaffee-To-Go Becher mit Sonnenlogo"></a>
                 <figcaption><strong>Spiel<br>Starten</strong></figcaption>
             </figure>
 
             <figure id="startOnClickOptions" class="bild">
-                <img src="../bilder/menu_bilder/option.jpg" alt="Optionen-Bild">
+                <img src="../bilder/menu_bilder/Endprodukt/Koffer.jpg" alt="Optionen-Bild, ein brauner Koffer mit 5 Urlaubsstickern vor einem hellen Licht">
                 <figcaption><strong>Optionen</strong></figcaption>
             </figure>
 
-            <figure id="fortschrittButton" class="bild">
-                <a href="../html/fortschritt.html"><img src="../bilder/menu_bilder/fortschritt.jpg"
-                        alt="Spiel-Start-Bild">
-                <img src="../bilder/menu_bilder/fortschritt.jpg" alt="Fortschritt-Bild"></a>
-                <figcaption><strong>Fort-<br>schritt</strong></figcaption>
-            </figure>
-
-            <figure id="buttonBestenliste" class="bild">
-                <img src="../bilder/menu_bilder/bestenliste.jpg" alt="Bestenliste-Bild">
-                <figcaption><strong>Besten-<br>liste</strong></figcaption>
-            </figure>
-
-            <figure id="btnMitwirkende" class="bild">
-                <img src="../bilder/menu_bilder/mitwirkende.jpg" alt="Mitwirkende-Bild">
-                <figcaption><strong>Mit-<br>wirkende</strong></figcaption>
-            </figure>
-
-            <figure id="endGameButton" class="bild">
-                <img src="../bilder/menu_bilder/beenden.jpg" alt="Beenden-Bild">
-                <figcaption><strong>Beenden</strong></figcaption>
+            <figure id="tutorialButton" class="bild" class="papierflieger">
+                <a href="../html/tutorial.html"><img src="../bilder/menu_bilder/Endprodukt/Flieger.jpg"
+                        alt="Spiel-Start-Bild, ein Papierflieger, der in den blauen Himmel mit ein paar Wölkchen fliegt"></a>
+                <figcaption><strong>Tutorial</strong></figcaption>
             </figure>
         </div>
+
     </div>
 
     <!--
     =========================================================
                 Was im Optionenfenster vorgeht
-    ==========================================================
+    =========================================================
     -->
 
     <dialog id="openWindowOptionID">
@@ -74,66 +62,35 @@
                     <p>Soundregler:</p>
                     <input type="range" min="0" max="100" value="50" class="slider" id="myRange">
                     <audio autoplay loop id="waldSound">
-                        <source src="../mp3/453712__kyles__airport-crowd-light-small-waiting-shopping-mall-barcelona-pa-message-spanish.flac" type="audio/wav">
-                        <!-- -->
+                        <source
+                            src="../mp3/453712__kyles__airport-crowd-light-small-waiting-shopping-mall-barcelona-pa-message-spanish.flac"
+                            type="audio/wav">
                     </audio>
                 </div>
             </section>
-            <!-- Optional wenn wir noch Zeit haben -->
+
+            <input type="checkbox" id="checkbox">Dunkelmodus</input>
+            <br>
+            <br>
+            <br>
             <button id="closeWindowOptionsButton">Schließen</button>
         </div>
         <div class="dialogStyle2">
-            <img src="../bilder/optionsBilder/Ticket.jpg">
+            <img class="ticketOption" src="../bilder/optionsBilder/Ticket.png" alt="Ein blaues Flugticket, ausgestellt auf Tiffany">
         </div>
     </dialog>
-
-    <!--
-    ========================================================
-                Bestenliste Bereich ab hier 
-    ========================================================
-    -->
-
-    <div id="bestenListeBereichHTML">
-        <h1>Bestenliste</h1>
-        <ol style="text-align: left; padding-left: 60px;">
-            <li>Spieler 1 - 500 Pkt</li>
-            <li>Spieler 2 - 450 Pkt</li>
-            <li>Spieler 3 - 300 Pkt</li>
-        </ol>
-
-        <button class="zumMenuButton">Zurück zum Menu</button>
-
-    </div>
-
-    <!--
-    =======================================================
-                Mitwirkende Bereich ab hier
-    =======================================================
-    -->
-
-    <div id="mitwirkendeBereichHTML">
-        <p>Lena, Jan und Markus</p>
-        <button class="zumMenuButton">Zurück zum Menu</button>
-    </div>
-
-    <!--
-    =======================================================
-    Hier könnte ihre CSS oder JS Dabei stehen (verlinkung) 
-    =======================================================
-    -->
 
     <div>
 
         <!--CSS-->
         <link rel="stylesheet" href="../CSS/optionsfenster.css">
-        <link rel="stylesheet" href="../CSS/sichtbarkeit.css">
         <link rel="stylesheet" href="../CSS/soundregler.css">
         <link rel="stylesheet" href="../CSS/containerFuerMenubilder.css">
-        
+
         <!--JS-->
         <script src="../JavaScript/allButtons_Options_Functions.js"></script>
         <script type="module" src="../JavaScript/menuSound.js"></script>
-        <script src="../JavaScript/localStorage.js"></script>
+        <script type="module" src="../JavaScript/localStorage.js"></script>
 
     </div>
 
